# ssdlc-demo

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .zap-rules.tsv  Dockerfile  Makefile  README.md  compose.yaml  detect-secrets.baseline  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  dast-zap.yml  deploy.yml
infra/: main.tf  outputs.tf  variables.tf
src/ssdlc_demo/: __init__.py  logging_config.py  main.py
tests/: test_echo.py  test_health.py
