[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ssdlc-demo"
version = "0.1.0"
description = "Secure SDLC demo with FastAPI, CI/CD, and security tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
keywords = ["fastapi", "security", "sast", "dast", "iac", "devsecops"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Topic :: Security",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-json-logger>=2.0.7",
  "structlog>=24.1.0",
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "black>=24.4.0",
  "isort>=5.13.2",
  "flake8>=7.1.0",
  "mypy>=1.10.0",
  "bandit>=1.7.9",
  "pre-commit>=3.7.0",
  "pip-audit>=2.7.3",
  "types-requests>=2.31.0",
  "httpx>=0.27.0",
  "detect-secrets>=1.5.0",
  "checkov>=3.2.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
pretty = true
strict_optional = true

[tool.pytest.ini_options]
addopts = "-ra --cov=ssdlc_demo --cov-report=term-missing --cov-report=xml:coverage.xml --cov-fail-under=80"
testpaths = ["tests"] 

[tool.hatch.build.targets.wheel]
packages = ["src/ssdlc_demo"]

[tool.hatch.build]
include = [
  "src/ssdlc_demo/**",
  "README.md",
] 